# slam_sim_ros2_ws

./: .gitignore  README.md  frames_2026-01-31_07.45.03.gv
docs/: DEPENDENCIES.md  README.md  USAGE.md  use_sim_time_analysis_report.md
map/slam_toolbox/20260131_072307/: map.data
scripts/: install_dependencies.sh
src/Gazebo/: CMakeLists.txt  package.xml
src/Gazebo/launch/: gazebo.launch.py
src/Gazebo/models/Depot/: model.sdf
src/Gazebo/models/pioneer2dx/: model.sdf
src/Gazebo/models/quadcopter/: model.sdf
src/Gazebo/rviz/: gazebo.rviz
src/Gazebo/scripts/: odom_to_tf.py
src/Gazebo/worlds/: my_world.sdf
src/SLAM/2D_SLAM/Cartographer/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/Cartographer/config/: cartographer.lua
src/SLAM/2D_SLAM/Cartographer/launch/: cartographer.launch.py
src/SLAM/2D_SLAM/Cartographer/rviz/: cartographer.rviz
src/SLAM/2D_SLAM/SLAMBOX/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/SLAMBOX/config/: mapper_params_localization.yaml  mapper_params_online_async.yaml
src/SLAM/2D_SLAM/SLAMBOX/launch/: hector_mapping.launch.py  slam_toolbox_localization.launch.py  slam_toolbox_mapping.launch.py
src/SLAM/2D_SLAM/SLAMBOX/rviz/: hector_slam.rviz  slam_toolbox.rviz
src/SLAM/2D_SLAM/Tools/: convert_slamtoolbox_map.py
src/SLAM/2D_SLAM/k_slam_ros2/: README.md
src/SLAM/2D_SLAM/k_slam_ros2/k_compressed_map_transport/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_compressed_map_transport/src/: map_to_image_node.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_geotiff/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_geotiff/include/k_geotiff/: geotiff_writer.h  map_writer_interface.h  map_writer_plugin_interface.h
src/SLAM/2D_SLAM/k_slam_ros2/k_geotiff/src/: geotiff_node.cpp  geotiff_node_cartographer.cpp  geotiff_node_slam_toolbox.cpp  geotiff_saver.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_geotiff/src/geotiff_writer/: geotiff_writer.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_attitude_to_tf/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_attitude_to_tf/launch/: example.launch
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_attitude_to_tf/src/: imu_attitude_to_tf_node.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_tools/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_tools/launch/: bertl_robot.launch  jasmine_robot.launch
src/SLAM/2D_SLAM/k_slam_ros2/k_imu_tools/src/: pose_and_orientation_to_imu_node.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_map_tools/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_map_tools/include/k_map_tools/: K_MapTools.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/include/k_slam_lib/map/: GridMap.h  GridMapBase.h  OccGridMapBase.h  OccGridMapUtil.h  OccGridMapUtilConfig.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/include/k_slam_lib/matcher/: ScanMatcher.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/include/k_slam_lib/scan/: DataPointContainer.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/include/k_slam_lib/slam_main/: K_SlamProcessor.h  MapProcContainer.h  MapRepMultiMap.h  MapRepSingleMap.h  MapRepresentationInterface.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/include/k_slam_lib/util/: K_DebugInfoInterface.h  UtilFunctions.h
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/launch/: k_slam.launch.py  mapping_default.launch
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/msg/: KDebugInfo.msg
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/scripts/: test_map_matching.py
src/SLAM/2D_SLAM/k_slam_ros2/k_mapping/src/: K_DebugInfoProvider.h  K_Drawings.h  K_MapMutex.h  K_MappingRos.cpp  K_MappingRos.h  PoseInfoContainer.cpp  PoseInfoContainer.h  main.cpp
src/SLAM/2D_SLAM/k_slam_ros2/k_marker_drawing/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_marker_drawing/include/k_marker_drawing/: K_Drawings.h
src/SLAM/2D_SLAM/k_slam_ros2/k_nav_msgs/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_nav_msgs/msg/: KIterData.msg
src/SLAM/2D_SLAM/k_slam_ros2/k_nav_msgs/srv/: GetDistanceToObstacle.srv  GetRecoveryInfo.srv
src/SLAM/2D_SLAM/k_slam_ros2/k_slam/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_trajectory_server/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/k_trajectory_server/src/: k_trajectory_server.cpp  odometry_topic.cpp
src/SLAM/2D_SLAM/k_slam_ros2/rrl_launchers/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/rrl_launchers/config/: VLP16-velodyne_driver_node-params.yaml  mapper_params_online_async.yaml
src/SLAM/2D_SLAM/k_slam_ros2/rrl_launchers/launch/: cartographer2d_launch.py  qr_launch.py  realsenses_launch.py  slam_launch.py  velodyne-all-nodes-VLP16-composed-launch.py  velodyne-all-nodes-VLP16-launch.py
src/SLAM/2D_SLAM/k_slam_ros2/rrl_launchers/params/: cartographer2d.lua
src/SLAM/2D_SLAM/k_slam_ros2/rrl_launchers/src/: dad_vision.cpp
src/SLAM/2D_SLAM/k_slam_ros2/rviz/: k_slam.rviz
src/SLAM/2D_SLAM/k_slam_ros2/world_info/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/world_info/launch/: tag_detectors_launch.py
src/SLAM/2D_SLAM/k_slam_ros2/world_info/python/: apriltag_ros.py  qrcode_ros_xzing-cpp.py  qrcode_ros_zbar.py
src/SLAM/2D_SLAM/k_slam_ros2/world_info/src/: aruco.cpp  qrcode.cpp  rs_depth.cpp  world_info.cpp
src/SLAM/2D_SLAM/k_slam_ros2/world_info_msgs/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/k_slam_ros2/world_info_msgs/msg/: WorldInfo.msg  WorldInfoArray.msg
src/SLAM/2D_SLAM/k_slam_ros2/world_info_msgs/srv/: GetMedianDepthXYZ.srv
src/SLAM/2D_SLAM/rtab_map/: CMakeLists.txt  package.xml
src/SLAM/2D_SLAM/rtab_map/launch/: rtabmap_lidar.launch.py  rtabmap_lidar_camera.launch.py  rtabmap_lidar_camera_localization.launch.py  rtabmap_lidar_localization.launch.py
src/SLAM/2D_SLAM/rtab_map/rviz/: rtabmap_lidar.rviz
src/SLAM/3D_SLAM/rtab_map_3d/: CMakeLists.txt  package.xml
src/SLAM/3D_SLAM/rtab_map_3d/launch/: rtabmap_3d_localization.launch.py  rtabmap_3d_mapping.launch.py
src/SLAM/SLAM_Manager/: package.xml  setup.py
src/SLAM/SLAM_Manager/slam_manager/: slam_manager_node.py  slam_manager_ui.py
(+2 files in other folders)
